fix(style): update badge-success color for improved visibility

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .badge-success {
     background: rgba(0 255 98 / 0.3);
-    color: rgb(8 77 34);
+    color: rgb(2, 10, 5);
 }
 
 .badge-neutral {
